--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "Megu Donni",
-  "short_name": "MeguDonni",
-  "start_url": "/?source=pwa",
+  "name": "Megudonni World",
+  "short_name": "Megudonni",
+  "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#111111",
-  "description": "Official Megu Donni website.",
+  "background_color": "#0a0a0a",
+  "theme_color": "#0a0a0a",
   "icons": [
     { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
+
